--- a/debian/control
+++ b/debian/control
@@ -11,6 +11,7 @@ Build-Depends: debhelper (>= 11.1.3),
                libaccountsservice-dev (>= 0.6.39),
                desktop-file-utils,
                eos-shell-content-dev,
+               git,
                gnome-pkg-tools (>= 0.10),
                gnome-settings-daemon-dev (>= 3.27.90),
                gsettings-desktop-schemas-dev (>= 3.31.0),
