Remove .pkla file
This should be dropped from the upstream Debian package. It's provided
only for compatibility with ancient versions of polkit that don't
interpret the .rules file.

Rebase 3.38 note: I attempted to propose this upstream but wasn't able
to fork https://salsa.debian.org/gnome-team/gnome-control-center

(cherry picked from commit e73b335a45ab47a3c98407079ab035750fdb6d1e)

--- a/debian/control
+++ b/debian/control
@@ -57,7 +57,7 @@ Build-Depends: debhelper-compat (= 13),
                libxml2-utils,
                locales,
                meson (>= 0.51.0),
-               policykit-1,
+               policykit-1 (>= 0.106),
                shared-mime-info,
                tzdata <!nocheck>,
                xvfb,
