Remove .pkla file
This should be dropped from the upstream Debian package. It's provided
only for compatibility with ancient versions of polkit that don't
interpret the .rules file.

(Cherry-picked from 747aa91, and bumped policykit-1 dependency to 0.106)

https://phabricator.endlessm.com/T27552

--- a/debian/control.in
+++ b/debian/control.in
@@ -48,7 +48,7 @@ Build-Depends: debhelper-compat (= 12),
                libxml2-dev,
                locales,
                meson (>= 0.51.0),
-               policykit-1,
+               policykit-1 (>= 0.106),
                shared-mime-info,
                tzdata <!nocheck>,
                xvfb,
