--- a/debian/control
+++ b/debian/control
@@ -51,7 +51,7 @@ Build-Depends: debhelper (>= 11.1.3),
                libxml2-dev,
                locales,
                meson (>= 0.50.0),
-               policykit-1,
+               policykit-1 (>= 0.106),
                shared-mime-info,
                tzdata <!nocheck>,
                xvfb,
