--- a/debian/control
+++ b/debian/control
@@ -10,6 +10,7 @@ Uploaders: Iain Lane <laney@debian.org>, Jeremy Bicha <jbicha@debian.org>, Micha
 Build-Depends: debhelper (>= 11.1.3),
                libaccountsservice-dev (>= 0.6.39),
                desktop-file-utils,
+               eos-shell-content-dev,
                gnome-pkg-tools (>= 0.10),
                gnome-settings-daemon-dev (>= 3.27.90),
                gsettings-desktop-schemas-dev (>= 3.31.0),
