Use dh_eoscontent to merge Endless desktop customizations
(Cherry picked from af0c40d)

https://phabricator.endlessm.com/T27552

--- a/debian/control
+++ b/debian/control
@@ -10,6 +10,7 @@ Uploaders: Iain Lane <laney@debian.org>, Jeremy Bicha <jbicha@debian.org>, Laure
 Build-Depends: debhelper-compat (= 12),
                libaccountsservice-dev (>= 0.6.39),
                desktop-file-utils,
+               eos-shell-content-dev,
                gnome-pkg-tools (>= 0.10),
                gnome-settings-daemon-dev (>= 3.29.90.1),
                gsettings-desktop-schemas-dev (>= 3.31.0),
