--- a/meson.build
+++ b/meson.build
@@ -78,7 +78,8 @@ if get_option('buildtype').contains('debug')
     '-Wmissing-prototypes',
     '-Wnested-externs',
     '-Wno-strict-aliasing',
-    '-Wno-sign-compare'
+    '-Wno-sign-compare',
+    '-Wno-deprecated-declarations'
   ]
 
   common_flags += cc.get_supported_arguments(test_cflags)
