Add build dependency on eos-metrics-0-dev
https://phabricator.endlessm.com/T18443
(cherry picked from commit 069507418af2ccf7df75460393133d563c97b719)

--- a/debian/control.in
+++ b/debian/control.in
@@ -6,6 +6,7 @@ Uploaders: @GNOME_TEAM@
 Build-Depends: debhelper-compat (= 12),
                libaccountsservice-dev (>= 0.6.39),
                desktop-file-utils,
+               eos-metrics-0-dev,
                gnome-pkg-tools (>= 0.10),
                gnome-settings-daemon-dev (>= 3.29.90.1),
                gsettings-desktop-schemas-dev (>= 3.37.1),
