Add build dependency on eos-metrics-0-dev
https://phabricator.endlessm.com/T18443

--- a/debian/control
+++ b/debian/control
@@ -10,6 +10,7 @@ Uploaders: Iain Lane <laney@debian.org>, Jeremy Bicha <jbicha@debian.org>, Laure
 Build-Depends: debhelper-compat (= 12),
                libaccountsservice-dev (>= 0.6.39),
                desktop-file-utils,
+               eos-metrics-0-dev,
                eos-shell-content-dev,
                git,
                gnome-pkg-tools (>= 0.10),
