Add build dependency on eos-metrics-0-dev
https://phabricator.endlessm.com/T18443

--- a/debian/control.in
+++ b/debian/control.in
@@ -6,6 +6,7 @@ Uploaders: @GNOME_TEAM@
 Build-Depends: debhelper (>= 11.1.3),
                libaccountsservice-dev (>= 0.6.39),
                desktop-file-utils,
+               eos-metrics-0-dev,
                eos-shell-content-dev,
                git,
                gnome-pkg-tools (>= 0.10),
