--- a/debian/control.in
+++ b/debian/control.in
@@ -7,6 +7,7 @@ Build-Depends: debhelper-compat (= 13),
                dh-sequence-gnome (>= 0.22.2),
                libaccountsservice-dev (>= 0.6.39),
                desktop-file-utils,
+               eos-metrics-0-dev,
                gnome-settings-daemon-dev (>= 41),
                gsettings-desktop-schemas-dev (>= 40),
                gtk-doc-tools,
