--- a/debian/control.in
+++ b/debian/control.in
@@ -43,7 +43,7 @@ Build-Depends: debhelper-compat (= 12),
                libpwquality-dev,
                libsecret-1-dev,
                libsmbclient-dev (>= 2:3.6.12-1~),
-               libudisks2-dev,
+               libudisks2-dev (>= 2.1.8),
                libupower-glib-dev (>= 0.99.8),
                libwacom-dev (>= 0.7) [linux-any],
                libxi-dev (>= 2:1.2),
@@ -78,6 +78,7 @@ Depends: ${misc:Depends},
          gnome-desktop3-data,
          gnome-settings-daemon (>= 3.37),
          gsettings-desktop-schemas (>= 3.37.1),
+         udisks2 (>= 2.1.8),
 Recommends: cups-pk-helper,
             gnome-online-accounts (>= 3.25.3),
             gnome-user-docs,
