--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -236,6 +236,10 @@ panels/universal-access/gnome-universal-access-panel.desktop.in.in
 panels/usage/cc-usage-panel.c
 panels/usage/cc-usage-panel.ui
 panels/usage/gnome-usage-panel.desktop.in.in
+panels/updates/cc-tariff-editor.ui
+panels/updates/cc-updates-panel.c
+panels/updates/cc-updates-panel.ui
+panels/updates/gnome-updates-panel.desktop.in.in
 panels/user-accounts/cc-add-user-dialog.c
 panels/user-accounts/cc-add-user-dialog.ui
 panels/user-accounts/cc-avatar-chooser.c
