--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -205,6 +205,10 @@ panels/universal-access/cc-ua-panel.ui
 panels/universal-access/gnome-universal-access-panel.desktop.in.in
 panels/universal-access/zoom-options.c
 panels/universal-access/zoom-options.ui
+panels/updates/cc-tariff-editor.ui
+panels/updates/cc-updates-panel.c
+panels/updates/cc-updates-panel.ui
+panels/updates/gnome-updates-panel.desktop.in.in
 panels/user-accounts/cc-add-user-dialog.c
 panels/user-accounts/cc-add-user-dialog.ui
 panels/user-accounts/cc-avatar-chooser.c
