--- a/debian/control.in
+++ b/debian/control.in
@@ -36,6 +36,7 @@ Build-Depends: debhelper (>= 11.1.3),
                libnm-dev (>= 1.12.0) [linux-any],
                libnma-dev (>= 1.8.0) [linux-any],
                libmm-glib-dev [linux-any],
+               libmogwai-tariff-0-dev,
                libpolkit-gobject-1-dev (>= 0.103),
                libpulse-dev,
                libpwquality-dev,
@@ -76,6 +77,7 @@ Depends: ${misc:Depends},
          gnome-desktop3-data,
          gnome-settings-daemon (>= 3.29),
          gsettings-desktop-schemas (>= 3.31.0),
+         libmogwai-tariff-0,
          udisks2 (>= 2.1.8),
 Recommends: cups-pk-helper,
             gnome-online-accounts (>= 3.25.3),
