Add libmogwai-tariff-0 dependency
https://phabricator.endlessm.com/T20818
(cherry picked from commit 1c6e5c8dedca6169259ff81324b303e9de29cba9)

--- a/debian/control.in
+++ b/debian/control.in
@@ -37,6 +37,7 @@ Build-Depends: debhelper-compat (= 13),
                libnma-dev (>= 1.8.0) [linux-any],
                libmalcontent-0-dev (>= 0.7.0) [amd64 arm64 armel armhf i386 mips mipsel mips64el ppc64el s390x hppa powerpc powerpcspe ppc64],
                libmm-glib-dev [linux-any],
+               libmogwai-tariff-0-dev,
                libpolkit-gobject-1-dev (>= 0.103),
                libpulse-dev (>= 13.0~),
                libpwquality-dev,
@@ -78,6 +79,7 @@ Depends: ${misc:Depends},
          gnome-desktop3-data,
          gnome-settings-daemon (>= 41),
          gsettings-desktop-schemas (>= 40),
+         libmogwai-tariff-0,
 Recommends: cups-pk-helper,
             gnome-online-accounts (>= 3.25.3),
             gnome-user-docs,
