Add App Permissions section
This is just the minimal set of widget that will be used
to build the functionality on top of. Application are
listed, but not filtered yet.

It is added as a new widget to help with future rebases,
and potentially upstreaming it.

https://phabricator.endlessm.com/T23897

--- a/panels/user-accounts/Makefile.am
+++ b/panels/user-accounts/Makefile.am
@@ -27,6 +27,8 @@ BUILT_SOURCES = \
 	um-resources.h
 
 libuser_accounts_la_SOURCES =		\
+	gs-content-rating.h		\
+	gs-content-rating.c		\
 	um-account-type.h		\
 	um-account-type.c 		\
 	um-account-dialog.h		\
@@ -58,6 +60,8 @@ libuser_accounts_la_SOURCES =		\
 	um-user-image.c			\
 	um-cell-renderer-user-image.h	\
 	um-cell-renderer-user-image.c	\
+	um-app-permissions.h		\
+	um-app-permissions.c		\
 	$(BUILT_SOURCES)
 
 libuser_accounts_la_LIBADD = 		\
