--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -202,10 +202,12 @@ panels/updates/gnome-updates-panel.desktop.in.in
 [type: gettext/glade]panels/user-accounts/data/account-dialog.ui
 [type: gettext/glade]panels/user-accounts/data/account-fingerprint.ui
 panels/user-accounts/data/gnome-user-accounts-panel.desktop.in.in
+[type: gettext/glade]panels/user-accounts/data/app-permissions.ui
 [type: gettext/glade]panels/user-accounts/data/history-dialog.ui
 [type: gettext/glade]panels/user-accounts/data/join-dialog.ui
 [type: gettext/glade]panels/user-accounts/data/password-dialog.ui
 [type: gettext/glade]panels/user-accounts/data/user-accounts-dialog.ui
+panels/user-accounts/gs-content-rating.c
 panels/user-accounts/org.gnome.controlcenter.user-accounts.policy.in
 panels/user-accounts/pw-utils.c
 panels/user-accounts/run-passwd.c
