--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -207,6 +207,7 @@ panels/updates/cc-updates-panel.ui
 panels/updates/gnome-updates-panel.desktop.in.in
 panels/user-accounts/cc-add-user-dialog.c
 panels/user-accounts/cc-add-user-dialog.ui
+panels/user-accounts/cc-app-permissions.c
 panels/user-accounts/cc-avatar-chooser.c
 panels/user-accounts/cc-avatar-chooser.ui
 panels/user-accounts/cc-login-history-dialog.c
