build: Add eos-parental-controls-0 and flatpak dependencies
They will be used by the new App Restrictions section of the Users
panel.

--- a/panels/user-accounts/meson.build
+++ b/panels/user-accounts/meson.build
@@ -168,7 +168,9 @@ deps = common_deps + [
   krb_dep,
   m_dep,
   polkit_gobject_dep,
-  dependency('pwquality', version: '>= 1.2.2')
+  dependency('pwquality', version: '>= 1.2.2'),
+  dependency('eos-parental-controls-0'),
+  dependency('flatpak')
 ]
 
 if enable_cheese
