panels: Add X-GNOME-UsesNotifications to several desktop files
gnome-settings-daemon emits notifications related to these five control
panels. If we add X-GNOME-UsesNotifications to their desktop files, the
user will be able to control the notifications.

(Backport to EOS: Support additional notification in
panels/universal-access.)

https://wiki.gnome.org/Initiatives/GnomeGoals/NotificationSource

Signed-off-by: Philip Withnall <withnall@endlessm.com>

https://phabricator.endlessm.com/T20990

--- a/panels/color/gnome-color-panel.desktop.in.in
+++ b/panels/color/gnome-color-panel.desktop.in.in
@@ -15,3 +15,5 @@ X-GNOME-Bugzilla-Component=color
 X-GNOME-Bugzilla-Version=@VERSION@
 # Translators: those are keywords for the color control-center panel
 _Keywords=Color;ICC;Profile;Calibrate;Printer;Display;
+# Notifications are emitted by gnome-settings-daemon
+X-GNOME-UsesNotifications=true
