--- a/panels/datetime/gnome-datetime-panel.desktop.in.in
+++ b/panels/datetime/gnome-datetime-panel.desktop.in.in
@@ -11,3 +11,5 @@ Categories=GNOME;GTK;Settings;X-GNOME-SystemSettings;X-GNOME-Settings-Panel;X-GN
 OnlyShowIn=GNOME;
 # Translators: those are keywords for the date and time control-center panel
 _Keywords=Clock;Timezone;Location;
+# Notifications are emitted by gnome-settings-daemon
+X-GNOME-UsesNotifications=true
