--- a/panels/power/gnome-power-panel.desktop.in.in
+++ b/panels/power/gnome-power-panel.desktop.in.in
@@ -15,3 +15,5 @@ X-GNOME-Bugzilla-Component=power
 X-GNOME-Bugzilla-Version=@VERSION@
 # Translators: those are keywords for the power control-center panel
 _Keywords=Power;Sleep;Suspend;Hibernate;Battery;Brightness;Dim;Blank;Monitor;DPMS;Idle;
+# Notifications are emitted by gnome-settings-daemon
+X-GNOME-UsesNotifications=true
