--- a/panels/universal-access/gnome-universal-access-panel.desktop.in.in
+++ b/panels/universal-access/gnome-universal-access-panel.desktop.in.in
@@ -15,3 +15,5 @@ X-GNOME-Bugzilla-Component=Universal Access
 X-GNOME-Bugzilla-Version=@VERSION@
 # Translators: those are keywords for the universal access control-center panel
 _Keywords=Keyboard;Mouse;a11y;Accessibility;Contrast;Zoom;Screen;Reader;text;font;size;AccessX;Sticky;Keys;Slow;Bounce;Mouse;Double;click;Delay;Assist;Repeat;Blink;
+# Notifications are emitted by gnome-settings-daemon
+X-GNOME-UsesNotifications=true
