--- a/panels/printers/gnome-printers-panel.desktop.in.in
+++ b/panels/printers/gnome-printers-panel.desktop.in.in
@@ -12,3 +12,5 @@ Categories=GNOME;GTK;Settings;HardwareSettings;X-GNOME-Settings-Panel;X-GNOME-De
 OnlyShowIn=GNOME;Unity;
 # Translators: those are keywords for the printing control-center panel
 _Keywords=Printer;Queue;Print;Paper;Ink;Toner;
+# Notifications are emitted by gnome-settings-daemon
+X-GNOME-UsesNotifications=true
