Add libeos-parental-controls-0 as dependency
https://phabricator.endlessm.com/T23897

--- a/debian/control
+++ b/debian/control
@@ -12,6 +12,7 @@ Build-Depends: debhelper (>= 10.3),
                libaccountsservice-dev (>= 0.6.39),
                desktop-file-utils,
                eos-metrics-0-dev,
+               libeos-parental-controls-0-dev,
                eos-shell-content-dev,
                git,
                gnome-common,
