--- a/debian/control
+++ b/debian/control
@@ -38,6 +38,7 @@ Build-Depends: debhelper-compat (= 12),
                libgudev-1.0-dev (>= 232) [linux-any],
                libhandy-1-dev,
                libkrb5-dev,
+               libmalcontent-0-dev (>= 0.7.0),
                libnm-dev (>= 1.12.0) [linux-any],
                libnma-dev (>= 1.8.0) [linux-any],
                libmm-glib-dev [linux-any],
