Add malcontent as dependency
(Cherry picked from 0e05dcd, 3dfc5c06 and 6dce31ff squashed in, changelog
entries removed)

https://phabricator.endlessm.com/T23897
https://phabricator.endlessm.com/T26995
https://phabricator.endlessm.com/T27064

--- a/debian/control.in
+++ b/debian/control.in
@@ -33,6 +33,7 @@ Build-Depends: debhelper-compat (= 12),
                libgtop2-dev,
                libgudev-1.0-dev (>= 232) [linux-any],
                libkrb5-dev,
+               libmalcontent-0-dev (>= 0.4.0),
                libnm-dev (>= 1.12.0) [linux-any],
                libnma-dev (>= 1.8.0) [linux-any],
                libmm-glib-dev [linux-any],
