--- a/debian/control
+++ b/debian/control
@@ -36,6 +36,7 @@ Build-Depends: debhelper (>= 11.1.3),
                libgtop2-dev,
                libgudev-1.0-dev [linux-any],
                libkrb5-dev,
+               libmalcontent-0-dev (>= 0.4.0),
                libnm-dev (>= 1.12.0) [linux-any],
                libnma-dev (>= 1.8.0) [linux-any],
                libmm-glib-dev [linux-any],
