user-accounts: Allow OARS filtering to be disabled
While some ratings schemes have an ‘everyone’ category, which
effectively disables filtering, many don’t. This prevented OARS
filtering from being disabled for a user once it had been enabled,
unless you were to manually edit the data stored in
/var/lib/AccountsService/users/*.

Add a new option to the OARS filter menu to explicitly allow filtering
to be disabled. This maps to an age of -1, and results in an empty OARS
filter being stored in accounts-service.

Signed-off-by: Philip Withnall <withnall@endlessm.com>

https://phabricator.endlessm.com/T25169

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -213,6 +213,7 @@ panels/user-accounts/pw-utils.c
 panels/user-accounts/run-passwd.c
 panels/user-accounts/um-account-dialog.c
 panels/user-accounts/um-account-type.c
+panels/user-accounts/um-app-permissions.c
 panels/user-accounts/um-fingerprint-dialog.c
 panels/user-accounts/um-history-dialog.c
 panels/user-accounts/um-password-dialog.c
