search: Filter list of search providers according to parental controls
If a non-admin user is using the ‘Search’ panel in the control center,
it doesn’t make sense to show them preferences for apps which are
blacklisted for them.

Signed-off-by: Philip Withnall <withnall@endlessm.com>

https://phabricator.endlessm.com/T25079
(cherry picked from commit cb3387336b58550d0a9dfe5faceb477a8d07ed64)

--- a/configure.ac
+++ b/configure.ac
@@ -173,7 +173,8 @@ PKG_CHECK_MODULES(REGION_PANEL, $COMMON_MODULES
                   accountsservice >= $ACCOUNTSSERVICE_REQUIRED_VERSION
                   $IBUS_MODULE)
 PKG_CHECK_MODULES(SCREEN_PANEL, $COMMON_MODULES)
-PKG_CHECK_MODULES(SEARCH_PANEL, $COMMON_MODULES)
+PKG_CHECK_MODULES(SEARCH_PANEL, $COMMON_MODULES
+                  eos-parental-controls-0)
 PKG_CHECK_MODULES(SOUND_PANEL, $COMMON_MODULES libxml-2.0
                   libcanberra-gtk3 >= $CANBERRA_REQUIRED_VERSION
                   libpulse >= $PA_REQUIRED_VERSION
