search: Filter list of search providers according to parental controls
If a non-admin user is using the ‘Search’ panel in the control center,
it doesn’t make sense to show them preferences for apps which are
blacklisted for them.

Signed-off-by: Philip Withnall <withnall@endlessm.com>

https://phabricator.endlessm.com/T25079

--- a/panels/search/meson.build
+++ b/panels/search/meson.build
@@ -27,6 +27,10 @@ resource_data = files(
   'search-locations-dialog.ui',
 )
 
+deps = common_deps + [
+    dependency('eos-parental-controls-0')
+  ]
+
 sources += gnome.compile_resources(
   'cc-' + cappletname + '-resources',
   cappletname + '.gresource.xml',
@@ -44,6 +48,6 @@ panels_libs += static_library(
   cappletname,
   sources: sources,
   include_directories: [ top_inc, common_inc ],
-  dependencies: common_deps,
+  dependencies: deps,
   c_args: cflags
 )
