--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -3,11 +3,11 @@
 [encoding: UTF-8]
 [type: gettext/glade]panels/background/background.ui
 panels/background/bg-colors-source.c
+panels/background/bg-pictures-source.c
 panels/background/cc-background-chooser-dialog.c
 panels/background/cc-background-item.c
 panels/background/cc-background-panel.c
 panels/background/gnome-background-panel.desktop.in.in
-panels/background/gnome-wallpapers.desktop.in
 [type: gettext/glade]panels/bluetooth/bluetooth.ui
 panels/bluetooth/cc-bluetooth-panel.c
 panels/bluetooth/gnome-bluetooth-panel.desktop.in.in
