--- a/debian/control.in
+++ b/debian/control.in
@@ -6,6 +6,10 @@ Uploaders: @GNOME_TEAM@
 Build-Depends: debhelper (>= 11.1.3),
                libaccountsservice-dev (>= 0.6.39),
                desktop-file-utils,
+               eos-metrics-0-dev,
+               libeos-parental-controls-0-dev,
+               eos-shell-content-dev,
+               git,
                gnome-pkg-tools (>= 0.10),
                gnome-settings-daemon-dev (>= 3.25.90),
                gsettings-desktop-schemas-dev (>= 3.31.0),
@@ -16,6 +20,7 @@ Build-Depends: debhelper (>= 11.1.3),
                libcolord-dev (>= 0.1.29),
                libcolord-gtk-dev (>= 0.1.24),
                libcups2-dev,
+               libflatpak-dev,
                libgdk-pixbuf2.0-dev (>= 2.23.0),
                libgirepository1.0-dev,
                libglib2.0-dev (>= 2.53.0),
@@ -33,6 +38,7 @@ Build-Depends: debhelper (>= 11.1.3),
                libnm-dev (>= 1.10.0) [linux-any],
                libnma-dev (>= 1.8.0) [linux-any],
                libmm-glib-dev [linux-any],
+               libmogwai-tariff-0-dev,
                libpolkit-gobject-1-dev (>= 0.103),
                libpulse-dev,
                libpwquality-dev,
@@ -73,6 +79,7 @@ Depends: ${misc:Depends},
          gnome-desktop3-data,
          gnome-settings-daemon (>= 3.29),
          gsettings-desktop-schemas (>= 3.31.0),
+         udisks2 (>= 2.1.8),
 Recommends: cups-pk-helper,
             gnome-online-accounts (>= 3.25.3),
             gnome-user-docs,
