--- a/debian/rules
+++ b/debian/rules
@@ -5,13 +5,14 @@ export DEB_CPPFLAGS_MAINT_APPEND = -DSSHD_SERVICE=\"ssh.service\"
 export DEB_LDFLAGS_MAINT_APPEND = -Wl,-O1 -Wl,-z,defs -Wl,--as-needed
 
 %:
-	dh $@ --with gnome
+	dh $@ --with gnome,eoscontent
 
 override_dh_auto_configure:
 	dh_auto_configure -- \
 		--libexecdir=/usr/lib/gnome-control-center \
 		-Dgnome_session_libexecdir=/usr/lib/gnome-session \
-		-Ddocumentation=true
+		-Ddocumentation=true \
+		-Dvendor_conf_file=/var/lib/eos-image-defaults/branding/gnome-control-center.conf
 
 override_dh_missing:
 	dh_missing --fail-missing
