parental-controls: Migrate to malcontent
eos-parental-controls is renamed to malcontent for upstreaming
purposes hence, we should move to libmalcontent so that it can
be dropped from Endless package-management system as well.

This commit does not introduce any functional changes. In the next
rebase cycle, this commit can be squashed with the commit where the
parental controls is introduced (c315ab1ed).

https://phabricator.endlessm.com/T26995
(cherry picked from commit 95bb615ae07f370946a8f99e4d034abde1716abc)

--- a/panels/search/meson.build
+++ b/panels/search/meson.build
@@ -28,7 +28,7 @@ resource_data = files(
 )
 
 deps = common_deps + [
-    dependency('eos-parental-controls-0')
+    dependency('malcontent-0', version: '>= 0.3.0')
   ]
 
 sources += gnome.compile_resources(
