--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -209,6 +209,7 @@ panels/updates/gnome-updates-panel.desktop.in.in
 panels/user-accounts/cc-add-user-dialog.c
 panels/user-accounts/cc-add-user-dialog.ui
 panels/user-accounts/cc-app-permissions.c
+panels/user-accounts/cc-app-permissions.ui
 panels/user-accounts/cc-avatar-chooser.c
 panels/user-accounts/cc-avatar-chooser.ui
 panels/user-accounts/cc-login-history-dialog.c
@@ -221,6 +222,7 @@ panels/user-accounts/cc-user-panel.ui
 panels/user-accounts/data/account-fingerprint.ui
 panels/user-accounts/data/gnome-user-accounts-panel.desktop.in.in
 panels/user-accounts/data/join-dialog.ui
+panels/user-accounts/gs-content-rating.c
 panels/user-accounts/org.gnome.controlcenter.user-accounts.policy.in
 panels/user-accounts/pw-utils.c
 panels/user-accounts/run-passwd.c
