--- a/debian/control
+++ b/debian/control
@@ -6,15 +6,12 @@ Source: gnome-control-center
 Section: gnome
 Priority: optional
 Maintainer: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>
-Uploaders: Jeremy Bicha <jbicha@debian.org>, Laurent Bigonville <bigon@debian.org>, Michael Biebl <biebl@debian.org>
+Uploaders: Iain Lane <laney@debian.org>, Jeremy Bicha <jbicha@debian.org>, Michael Biebl <biebl@debian.org>
 Build-Depends: debhelper (>= 11.1.3),
                libaccountsservice-dev (>= 0.6.39),
                desktop-file-utils,
-               eos-metrics-0-dev,
-               eos-shell-content-dev,
-               git,
                gnome-pkg-tools (>= 0.10),
-               gnome-settings-daemon-dev (>= 3.25.90),
+               gnome-settings-daemon-dev (>= 3.27.90),
                gsettings-desktop-schemas-dev (>= 3.31.0),
                gtk-doc-tools,
                libcanberra-gtk3-dev,
@@ -23,12 +20,10 @@ Build-Depends: debhelper (>= 11.1.3),
                libcolord-dev (>= 0.1.29),
                libcolord-gtk-dev (>= 0.1.24),
                libcups2-dev,
-               libflatpak-dev,
                libgdk-pixbuf2.0-dev (>= 2.23.0),
                libgirepository1.0-dev,
                libglib2.0-dev (>= 2.53.0),
                libgnome-desktop-3-dev (>= 3.27.90),
-               libgnomekbd-dev (>= 2.91.91),
                libgnome-bluetooth-dev (>= 3.18.0) [linux-any],
                libibus-1.0-dev (>= 1.5.2),
                libgoa-1.0-dev (>= 3.25.3),
@@ -38,11 +33,9 @@ Build-Depends: debhelper (>= 11.1.3),
                libgtop2-dev,
                libgudev-1.0-dev [linux-any],
                libkrb5-dev,
-               libmalcontent-0-dev (>= 0.4.0),
-               libnm-dev (>= 1.10.0) [linux-any],
+               libnm-dev (>= 1.12.0) [linux-any],
                libnma-dev (>= 1.8.0) [linux-any],
                libmm-glib-dev [linux-any],
-               libmogwai-tariff-0-dev,
                libpolkit-gobject-1-dev (>= 0.103),
                libpulse-dev,
                libpwquality-dev,
@@ -57,7 +50,7 @@ Build-Depends: debhelper (>= 11.1.3),
                libxklavier-dev (>= 5.1),
                libxml2-dev,
                locales,
-               meson (>= 0.48.0),
+               meson (>= 0.50.0),
                policykit-1,
                shared-mime-info,
                tzdata <!nocheck>,
@@ -76,13 +69,13 @@ Depends: ${misc:Depends},
          accountsservice,
          apg,
          colord (>= 0.1.30),
+         desktop-base (>= 10.0.0),
          desktop-file-utils,
          gnome-control-center-data (<< ${gnome:NextVersion}),
          gnome-control-center-data (>= ${source:Version}),
          gnome-desktop3-data,
          gnome-settings-daemon (>= 3.29),
          gsettings-desktop-schemas (>= 3.31.0),
-         udisks2 (>= 2.1.8),
 Recommends: cups-pk-helper,
             gnome-online-accounts (>= 3.25.3),
             gnome-user-docs,
