Revert "user-accounts: Add parental controls keywords to the desktop file"
This reverts commit 1de4f9a311e4d4218db43f7eadf9e442f4efbbda.

https://phabricator.endlessm.com/T28738

--- a/panels/user-accounts/data/gnome-user-accounts-panel.desktop.in.in
+++ b/panels/user-accounts/data/gnome-user-accounts-panel.desktop.in.in
@@ -15,4 +15,4 @@ X-GNOME-Bugzilla-Component=user-accounts
 X-GNOME-Bugzilla-Version=@VERSION@
 X-GNOME-Settings-Panel=user-accounts
 # Translators: Search terms to find the Users panel. Do NOT translate or localize the semicolons! The list MUST also end with a semicolon!
-Keywords=Login;Name;Fingerprint;Avatar;Logo;Face;Password;Parental;Restrict;Restrictions;
+Keywords=Login;Name;Fingerprint;Avatar;Logo;Face;Password;
