--- a/panels/common/gnome-control-center.rules.in
+++ b/panels/common/gnome-control-center.rules.in
@@ -10,4 +10,12 @@ polkit.addRule(function(action, subject) {
 	    subject.isInGroup ("@PRIVILEGED_GROUP@")) {
 		    return polkit.Result.YES;
 	    }
+
+	if (action.id == "com.endlessm.Metrics.SetEnabled" ||
+	    action.id == "com.endlessm.Metrics.ResetTrackingId") {
+		if (subject.local && subject.active && subject.isInGroup ("@PRIVILEGED_GROUP@"))
+			return polkit.Result.YES;
+		else
+			return polkit.Result.AUTH_ADMIN;
+	}
 });
