--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -76,6 +76,8 @@ panels/location/cc-location-panel.ui
 panels/location/gnome-location-panel.desktop.in.in
 panels/lock/cc-lock-panel.ui
 panels/lock/gnome-lock-panel.desktop.in.in
+panels/metrics/cc-metrics-panel.ui
+panels/metrics/gnome-metrics-panel.desktop.in.in
 panels/microphone/cc-microphone-panel.ui
 panels/microphone/gnome-microphone-panel.desktop.in.in
 panels/mouse/cc-mouse-panel.ui
