--- a/debian/control
+++ b/debian/control
@@ -6,15 +6,12 @@ Source: gnome-control-center
 Section: gnome
 Priority: optional
 Maintainer: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>
-Uploaders: Iain Lane <laney@debian.org>, Jeremy Bicha <jbicha@debian.org>, Michael Biebl <biebl@debian.org>
-Build-Depends: debhelper (>= 11.1.3),
+Uploaders: Iain Lane <laney@debian.org>, Jeremy Bicha <jbicha@debian.org>, Laurent Bigonville <bigon@debian.org>, Michael Biebl <biebl@debian.org>
+Build-Depends: debhelper-compat (= 12),
                libaccountsservice-dev (>= 0.6.39),
                desktop-file-utils,
-               eos-metrics-0-dev,
-               eos-shell-content-dev,
-               git,
                gnome-pkg-tools (>= 0.10),
-               gnome-settings-daemon-dev (>= 3.27.90),
+               gnome-settings-daemon-dev (>= 3.29.90.1),
                gsettings-desktop-schemas-dev (>= 3.31.0),
                gtk-doc-tools,
                libcanberra-gtk3-dev,
@@ -23,11 +20,11 @@ Build-Depends: debhelper (>= 11.1.3),
                libcolord-dev (>= 0.1.29),
                libcolord-gtk-dev (>= 0.1.24),
                libcups2-dev,
-               libflatpak-dev,
                libgdk-pixbuf2.0-dev (>= 2.23.0),
                libgirepository1.0-dev,
-               libglib2.0-dev (>= 2.53.0),
-               libgnome-desktop-3-dev (>= 3.27.90),
+               libglib2.0-dev (>= 2.56.0),
+               libgnome-desktop-3-dev (>= 3.32.2-2ubuntu2),
+               libgnomekbd-dev (>= 2.91.91),
                libgnome-bluetooth-dev (>= 3.18.0) [linux-any],
                libibus-1.0-dev (>= 1.5.2),
                libgoa-1.0-dev (>= 3.25.3),
@@ -35,19 +32,17 @@ Build-Depends: debhelper (>= 11.1.3),
                libgsound-dev,
                libgtk-3-dev (>= 3.22.20),
                libgtop2-dev,
-               libgudev-1.0-dev [linux-any],
+               libgudev-1.0-dev (>= 232) [linux-any],
                libkrb5-dev,
-               libmalcontent-0-dev (>= 0.4.0),
                libnm-dev (>= 1.12.0) [linux-any],
                libnma-dev (>= 1.8.0) [linux-any],
                libmm-glib-dev [linux-any],
-               libmogwai-tariff-0-dev,
                libpolkit-gobject-1-dev (>= 0.103),
                libpulse-dev,
                libpwquality-dev,
                libsecret-1-dev,
                libsmbclient-dev (>= 2:3.6.12-1~),
-               libudisks2-dev (>= 2.1.8),
+               libudisks2-dev,
                libupower-glib-dev (>= 0.99.8),
                libwacom-dev (>= 0.7) [linux-any],
                libxi-dev (>= 2:1.2),
@@ -56,14 +51,14 @@ Build-Depends: debhelper (>= 11.1.3),
                libxklavier-dev (>= 5.1),
                libxml2-dev,
                locales,
-               meson (>= 0.50.0),
-               policykit-1 (>= 0.106),
+               meson (>= 0.51.0),
+               policykit-1,
                shared-mime-info,
                tzdata <!nocheck>,
                xvfb,
                python3-dbusmock,
                at-spi2-core
-Standards-Version: 4.3.0
+Standards-Version: 4.5.0
 Rules-Requires-Root: no
 Vcs-Git: https://salsa.debian.org/gnome-team/gnome-control-center.git
 Vcs-Browser: https://salsa.debian.org/gnome-team/gnome-control-center
@@ -75,14 +70,13 @@ Depends: ${misc:Depends},
          accountsservice,
          apg,
          colord (>= 0.1.30),
+         desktop-base (>= 10.0.0),
          desktop-file-utils,
          gnome-control-center-data (<< ${gnome:NextVersion}),
          gnome-control-center-data (>= ${source:Version}),
          gnome-desktop3-data,
          gnome-settings-daemon (>= 3.29),
          gsettings-desktop-schemas (>= 3.31.0),
-         libmogwai-tariff-0,
-         udisks2 (>= 2.1.8),
 Recommends: cups-pk-helper,
             gnome-online-accounts (>= 3.25.3),
             gnome-user-docs,
@@ -117,7 +111,8 @@ Package: gnome-control-center-dev
 Architecture: all
 Multi-Arch: foreign
 Section: devel
-Depends: ${misc:Depends}
+Depends: ${misc:Depends},
+         gnome-control-center-data
 Description: utilities to configure the GNOME desktop
  This package contains the file required to get the keydirs location
 
