--- a/debian/rules
+++ b/debian/rules
@@ -5,11 +5,12 @@ export DEB_CPPFLAGS_MAINT_APPEND = -DSSHD_SERVICE=\"ssh.service\"
 export DEB_LDFLAGS_MAINT_APPEND = -Wl,-O1 -Wl,-z,defs -Wl,--as-needed
 
 %:
-	dh $@ --with gnome,eoscontent
+	dh $@ --with gnome
 
+# -Dgnome_session_libexecdir can be removed after Bullseye release
 override_dh_auto_configure:
 	dh_auto_configure -- \
-		--libexecdir=/usr/lib/gnome-control-center \
+		-Dprivileged_group=sudo \
 		-Dgnome_session_libexecdir=/usr/lib/gnome-session \
 		-Ddocumentation=true
 
