fixup! privacy: Add metrics panel controlling metrics service integration
.desktop files contain translatable strings so should be listed in POTFILES.

Also tweak a translator comment, because I'm feeling pedantic. This is
_a_ Privacy panel, but it's not _the_ Privacy panel: it's _the_ Metrics
panel.

https://phabricator.endlessm.com/T29842

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -74,6 +74,7 @@ panels/location/gnome-location-panel.desktop.in.in
 panels/lock/cc-lock-panel.ui
 panels/lock/gnome-lock-panel.desktop.in.in
 panels/metrics/cc-metrics-panel.ui
+panels/metrics/gnome-metrics-panel.desktop.in.in
 panels/microphone/cc-microphone-panel.ui
 panels/microphone/gnome-microphone-panel.desktop.in.in
 panels/mouse/cc-mouse-panel.ui
