--- a/panels/metrics/gnome-metrics-panel.desktop.in.in
+++ b/panels/metrics/gnome-metrics-panel.desktop.in.in
@@ -9,5 +9,5 @@ Type=Application
 NoDisplay=true
 Categories=GNOME;GTK;Settings;DesktopSettings;X-GNOME-Settings-Panel;X-GNOME-PrivacySettings;
 OnlyShowIn=GNOME;Unity;
-# Translators: Search terms to find the Privacy panel. Do NOT translate or localize the semicolons! The list MUST also end with a semicolon!
+# Translators: Search terms to find the Metrics panel. Do NOT translate or localize the semicolons! The list MUST also end with a semicolon!
 Keywords=private;privacy;metrics;network;identity;
