eos: Add metric for opening a panel
https://phabricator.endlessm.com/T18443
https://phabricator.endlessm.com/T27323

--- a/shell/meson.build
+++ b/shell/meson.build
@@ -108,6 +108,7 @@ libshell_dep = declare_dependency(
 shell_sources = common_sources + files('main.c')
 
 shell_deps = common_deps + [
+  dependency('eosmetrics-0'),
   libdevice_dep,
   liblanguage_dep,
   libwidgets_dep,
