updates: Send a metric when automatic updates settings change
This will give us some measure of how many people are using automatic
updates, and how many of those are on metered connections.

Signed-off-by: Philip Withnall <pwithnall@endlessos.org>

https://phabricator.endlessm.com/T29248

--- a/panels/updates/meson.build
+++ b/panels/updates/meson.build
@@ -36,6 +36,7 @@ sources = common_sources + files(
 )
 
 deps = common_deps + [
+  dependency('eosmetrics-0'),
   dependency('libnm', version: '>= 1.8.0'),
   dependency('libnma', version: '>= 1.8.0'),
   dependency('mogwai-tariff-0', version: '>=0.1.0'),
