--- a/debian/control.in
+++ b/debian/control.in
@@ -6,8 +6,6 @@ Uploaders: @GNOME_TEAM@
 Build-Depends: debhelper-compat (= 12),
                libaccountsservice-dev (>= 0.6.39),
                desktop-file-utils,
-               eos-metrics-0-dev,
-               git,
                gnome-pkg-tools (>= 0.10),
                gnome-settings-daemon-dev (>= 3.29.90.1),
                gsettings-desktop-schemas-dev (>= 3.37.1),
@@ -18,7 +16,7 @@ Build-Depends: debhelper-compat (= 12),
                libcolord-dev (>= 0.1.29),
                libcolord-gtk-dev (>= 0.1.24),
                libcups2-dev,
-               libgdk-pixbuf2.0-dev (>= 2.23.0),
+               libgdk-pixbuf-2.0-dev (>= 2.23.0) | libgdk-pixbuf2.0-dev (>= 2.23.0),
                libgirepository1.0-dev,
                libglib2.0-dev (>= 2.56.0),
                libgnome-desktop-3-dev (>= 3.32.2-2ubuntu2),
@@ -26,6 +24,7 @@ Build-Depends: debhelper-compat (= 12),
                libgnome-bluetooth-dev (>= 3.18.0) [linux-any],
                libibus-1.0-dev (>= 1.5.2),
                libgoa-1.0-dev (>= 3.25.3),
+               libgoa-backend-1.0-dev (>= 3.25.3),
                libgrilo-0.3-dev (>= 0.3.0),
                libgsound-dev,
                libgtk-3-dev (>= 3.22.20),
@@ -33,17 +32,17 @@ Build-Depends: debhelper-compat (= 12),
                libgudev-1.0-dev (>= 232) [linux-any],
                libhandy-1-dev (>= 0.90),
                libkrb5-dev,
-               libmalcontent-0-dev (>= 0.7.0),
                libnm-dev (>= 1.12.0) [linux-any],
                libnma-dev (>= 1.8.0) [linux-any],
+               libmalcontent-0-dev (>= 0.7.0) [amd64 arm64 armel armhf i386 mips mipsel mips64el ppc64el s390x hppa powerpc powerpcspe ppc64],
                libmm-glib-dev [linux-any],
-               libmogwai-tariff-0-dev,
                libpolkit-gobject-1-dev (>= 0.103),
-               libpulse-dev,
+               libpulse-dev (>= 13.0~),
                libpwquality-dev,
                libsecret-1-dev,
                libsmbclient-dev (>= 2:3.6.12-1~),
-               libudisks2-dev (>= 2.1.8),
+               libsoup2.4-dev,
+               libudisks2-dev,
                libupower-glib-dev (>= 0.99.8),
                libwacom-dev (>= 0.7) [linux-any],
                libxi-dev (>= 2:1.2),
@@ -53,13 +52,13 @@ Build-Depends: debhelper-compat (= 12),
                libxml2-dev,
                locales,
                meson (>= 0.51.0),
-               policykit-1 (>= 0.106),
+               policykit-1,
                shared-mime-info,
                tzdata <!nocheck>,
                xvfb,
                python3-dbusmock,
                at-spi2-core
-Standards-Version: 4.5.0
+Standards-Version: 4.5.1
 Rules-Requires-Root: no
 Vcs-Git: https://salsa.debian.org/gnome-team/gnome-control-center.git
 Vcs-Browser: https://salsa.debian.org/gnome-team/gnome-control-center
@@ -71,14 +70,13 @@ Depends: ${misc:Depends},
          accountsservice,
          apg,
          colord (>= 0.1.30),
+         desktop-base (>= 10.0.0),
          desktop-file-utils,
          gnome-control-center-data (<< ${gnome:NextVersion}),
          gnome-control-center-data (>= ${source:Version}),
          gnome-desktop3-data,
          gnome-settings-daemon (>= 3.37),
          gsettings-desktop-schemas (>= 3.37.1),
-         libmogwai-tariff-0,
-         udisks2 (>= 2.1.8),
 Recommends: cups-pk-helper,
             gnome-online-accounts (>= 3.25.3),
             gnome-user-docs,
@@ -89,6 +87,7 @@ Recommends: cups-pk-helper,
             policykit-1,
             rygel | rygel-tracker,
             system-config-printer-common (>= 1.4),
+            malcontent-gui [amd64 arm64 armel armhf i386 mips mipsel mips64el ppc64el s390x hppa powerpc powerpcspe ppc64],
             network-manager-gnome (>= 0.9.8),
             libnss-myhostname,
             cracklib-runtime,
